components/MainLayout/components/PageHeader/PageHeader.css
@value userSiteColor, proSiteColor, secondaryButtonColor, navColor from "../../../../css/colors.css";
@value smallRem, mediumRem, largeRem from "../../../../css/breakpoints.css";

.headerSearchBar {
  background-color: userSiteColor;
  width: 100%;

  &.pro {
    background-color: proSiteColor;
  }
}

.flexWrapper {
  padding: 0.5rem 1rem;
  display: flex;
  align-items: center;
  margin: auto;

  &.pro {
    @media (max-width: mediumRem) {
      padding: 0;
    }
  }

  @media (min-width: largeRem) {
    padding: 0;
  }
}

.searchBar {
  align-items: center;
  display: flex;
  height: 2.5rem;
  width: 100%;
  margin: auto;
  padding-left: 1rem;

  @media (min-width: largeRem) {
    width: 50%;
  }
}

.searchInput {
  font-size: 1rem;
  border: none;
  border-radius: 3px 0 0 3px;
  padding-left: 1rem;
  flex-grow: 1;
  height: 100%;

  /* Remove browser search input defaults */
  &::-webkit-search-decoration,
  &::-webkit-search-cancel-button,
  &::-webkit-search-results-button,
  &::-webkit-search-results-decoration {
    -webkit-appearance: none;
  }

  &:focus::placeholder {
    opacity: 0.25;
  }
}

.searchInput::placeholder {
  transition: opacity .2s ease-out;
  color: secondaryButtonColor;
  opacity: 0.5;
}

.searchButton {
  transition: background-color .2s ease-out;
  background-color: secondaryButtonColor;
  border-radius: 0 3px 3px 0;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  font-size: 1rem;
  font-weight: 600;
  color: white;
  padding: 0 1rem;

  &:hover {
    background-color: navColor;
  }
}

.logo {
  padding: 0.5rem 0;
  display: none; /* hide logo in small screens */

  @media (min-width: mediumRem) {
    display: block;
  }

  @media (min-width: largeRem) {
    padding: 1rem 0;
  }
}

.logoImg {
  width: 16rem;

  @media (min-width: largeRem) {
    width: 18rem;
  }
}

